[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/LocomotiveLarge.tres" type="DynamicFont" id=1]
[ext_resource path="res://Theme/kenneyUICustom.tres" type="Theme" id=2]
[ext_resource path="res://Source/GDScript/UI/PopUpBox.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Audio/ButtonAudio.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/zapsplat_sport_badminton_racket_fast_swing_whoosh_002_76397.mp3" type="AudioStream" id=5]

[node name="PopUpBox" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 168.0
margin_top = 160.0
margin_right = -496.0
margin_bottom = -384.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1256.0
margin_bottom = 536.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_right = 16.0
margin_bottom = 536.0
rect_min_size = Vector2( 16, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 20.0
margin_right = 1236.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
margin_right = 1216.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlePanel" type="Panel" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 1216.0
margin_bottom = 68.0
rect_min_size = Vector2( 400, 48 )
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 2 )

[node name="Title" type="Label" parent="Panel/HBoxContainer/VBoxContainer/TitlePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Title Text"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 1216.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyPanel" type="Panel" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 1216.0
margin_bottom = 444.0
rect_min_size = Vector2( 400, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="Title" type="Label" parent="Panel/HBoxContainer/VBoxContainer/BodyPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Title Text"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 448.0
margin_right = 1216.0
margin_bottom = 464.0
rect_min_size = Vector2( 0, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 468.0
margin_right = 1216.0
margin_bottom = 516.0
rect_min_size = Vector2( 400, 48 )
size_flags_vertical = 0
theme = ExtResource( 2 )

[node name="Button" type="Button" parent="Panel/HBoxContainer/VBoxContainer/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 520.0
margin_right = 1216.0
margin_bottom = 536.0
rect_min_size = Vector2( 0, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_left = 1240.0
margin_right = 1256.0
margin_bottom = 536.0
rect_min_size = Vector2( 16, 0 )

[node name="ButtonAudio" parent="." instance=ExtResource( 4 )]

[node name="WooshAudio" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 1.5

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Panel3/Button" to="." method="_on_Button_pressed"]
